log
Thu 16 May 2024 12:48:59 AM UTC: 
 tests:  0|5
total_score: 0/70
b4d37f4
Thu 16 May 2024 02:46:52 PM UTC: 
 sudoku.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  2|4
total_score: 15/70
f492af6
Thu 16 May 2024 02:54:55 PM UTC: 
 sudoku.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  0|5
total_score: 0/70
bbde453
Thu 16 May 2024 03:02:00 PM UTC: 
 sudoku.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:63:27: error: ‘j’ undeclared (first use in this function)
   63 |     for(int i = 0; i < 9; j++)
      |                           ^
sudoku.c:63:27: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
447310c
Thu 16 May 2024 03:02:10 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
37f97ca
Thu 16 May 2024 03:08:56 PM UTC: 
 sudoku.c | 11 +++++++----
 1 file changed, 7 insertions(+), 4 deletions(-)
test.c: In function ‘is_valid’:
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
test.c:263: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
659e963
Thu 16 May 2024 03:09:24 PM UTC: 
 sudoku.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
c640875
Thu 16 May 2024 03:10:28 PM UTC: 
 sudoku.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
ea9734d
Thu 16 May 2024 03:17:21 PM UTC: 
 sudoku.c | 14 +++++++++-----
 1 file changed, 9 insertions(+), 5 deletions(-)
 tests:  2|4
total_score: 15/70
2a21318
Thu 16 May 2024 03:18:15 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|4
total_score: 15/70
7cbc66a
Thu 16 May 2024 03:19:11 PM UTC: 
 sudoku.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  2|4
total_score: 15/70
f82432c
Thu 16 May 2024 03:20:34 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
5cce00e
Thu 16 May 2024 03:21:11 PM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
27b04ae
Thu 16 May 2024 03:21:45 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
f64fad8
Thu 16 May 2024 03:23:10 PM UTC: 
 sudoku.c | 10 ++++------
 1 file changed, 4 insertions(+), 6 deletions(-)
 tests:  2|4
total_score: 15/70
80a012a
Thu 16 May 2024 03:23:27 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
0bd2ea7
Thu 16 May 2024 03:24:54 PM UTC: 
 sudoku.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
5b1fe72
Thu 16 May 2024 03:26:38 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|4
total_score: 15/70
78a9d36
Thu 16 May 2024 03:29:00 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
b399bf5
Thu 16 May 2024 03:30:24 PM UTC: 
 sudoku.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
9f34f76
Thu 16 May 2024 03:32:21 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
e75cc68
Thu 16 May 2024 03:33:01 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
152ba48
Thu 16 May 2024 03:33:23 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
3b3b7b3
Thu 16 May 2024 03:34:14 PM UTC: 
 sudoku.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
db02d70
Thu 16 May 2024 03:36:51 PM UTC: 
 sudoku.c | 21 +++++++++++----------
 1 file changed, 11 insertions(+), 10 deletions(-)
 tests:  5|3
total_score: 35/70
52c26a2
Thu 16 May 2024 03:37:13 PM UTC: 
 sudoku.c | 8 --------
 1 file changed, 8 deletions(-)
 tests:  5|3
total_score: 35/70
50a3118
Thu 16 May 2024 03:37:58 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|3
total_score: 35/70
3e75d79
Thu 16 May 2024 03:45:30 PM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  3|4
total_score: 20/70
43d814f
Thu 16 May 2024 03:45:52 PM UTC: 
 sudoku.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  5|3
total_score: 35/70
1df6bff
Thu 16 May 2024 03:50:27 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:100:20: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
  100 |                    if(is_valid(adj) && adj->sudo[i][j] != 0);
      |                    ^~
sudoku.c:101:23: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
  101 |                       pushBack(list, adj);
      |                       ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
f2131f5
Thu 16 May 2024 03:50:36 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
6e0f3fd
Thu 16 May 2024 03:50:50 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
3748a80
Thu 16 May 2024 03:51:32 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
1748941
Thu 16 May 2024 03:53:35 PM UTC: 
 sudoku.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  5|3
total_score: 35/70
c676595
Thu 16 May 2024 03:53:52 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
60789bb
Thu 16 May 2024 05:40:24 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
e51c4c1
